--- a/index.html
+++ b/index.html
@@ -68,11 +68,9 @@
       --btnText:#111827;
 
       --border: rgba(255,255,255,.12);
-      --border2: rgba(245,158,11,.22);
+      --shadow: rgba(0,0,0,.50);
 
       --secondaryText: rgba(243,244,246,.92);
-
-      --shadow: rgba(0,0,0,.50);
     }
 
     *{box-sizing:border-box}
@@ -95,14 +93,12 @@
       width:min(980px, 100%);
       background: linear-gradient(180deg, var(--card), var(--card2));
       backdrop-filter: blur(10px);
-      border:1px solid var(--border);
+      border:1px solid rgba(255,255,255,.12);
       border-radius:22px;
       overflow:hidden;
       box-shadow: 0 18px 60px var(--shadow);
       position:relative;
-
-      /* clave: evitamos cualquier justificado heredado */
-      text-align: left;
+      text-align:left;
     }
 
     .wrap:before{
@@ -129,7 +125,7 @@
     .img{
       width:100%;
       border-radius:18px;
-      border:1px solid var(--border);
+      border:1px solid rgba(255,255,255,.12);
       background: rgba(0,0,0,.2);
       overflow:hidden;
       aspect-ratio: 1 / 1;
@@ -160,66 +156,26 @@
     }
 
     p{
-      margin:0 0 12px 0;
+      margin:0;
       color:var(--muted);
       font-size:16px;
       line-height:1.55;
       max-width: 62ch;
-
-      /* clave: nunca justificar acá */
-      text-align: left;
-      text-align-last: left;
+      text-align:left !important;
+      text-align-last:left !important;
+      letter-spacing: normal;
+      word-spacing: normal;
+      white-space: normal;
+      hyphens: none;
     }
 
-    .bullets{
-      list-style:none;
-      padding:0;
-      margin: 12px 0 18px 0;
-      color: var(--muted);
-      display:grid;
-      gap:10px;
-      max-width: 62ch;
-
-      /* clave: evita los espacios gigantes */
-      text-align: left;
-      text-align-last: left;
-    }
-    .bullets li{
-      display:flex;
-      gap:12px;
-      align-items:flex-start;
-
-      /* clave: evita justificado dentro del li */
-      text-align: left;
-      text-align-last: left;
-    }
-    .check{
-      width:18px;
-      height:18px;
-      border-radius:6px;
-      background: rgba(245,158,11,.16);
-      border:1px solid var(--border2);
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      flex: 0 0 18px;
-      margin-top:3px;
-      font-size:12px;
-      color: rgba(245,158,11,.95);
-    }
-    .bulletText{
-      display:block;
-      line-height:1.45;
-      /* más natural el wrapping */
-      word-break: normal;
-      overflow-wrap: anywhere;
-    }
+    .paraGap{ margin-top: 10px; }
 
     .btnRow{
       display:flex;
       flex-wrap:wrap;
       gap:12px;
-      margin-top: 8px;
+      margin-top: 18px;
     }
 
     .btn{
@@ -246,7 +202,7 @@
     .btn.secondary{
       background: transparent;
       color: var(--secondaryText);
-      border: 1px solid var(--border);
+      border: 1px solid rgba(255,255,255,.12);
     }
     .btn.secondary:hover{
       background: rgba(255,255,255,.06);
@@ -265,8 +221,8 @@
       color: var(--muted2);
       margin-top: 10px;
       line-height: 1.4;
-      text-align: left;
-      text-align-last: left;
+      text-align:left !important;
+      text-align-last:left !important;
     }
     .smallNote a{color: var(--text); text-underline-offset: 3px}
 
@@ -285,7 +241,7 @@
       width:min(980px, 100%);
       height:min(84vh, 820px);
       background: rgba(17,24,39,.98);
-      border:1px solid var(--border);
+      border:1px solid rgba(255,255,255,.12);
       border-radius:18px;
       overflow:hidden;
       box-shadow: 0 18px 60px rgba(0,0,0,.55);
@@ -298,7 +254,7 @@
       justify-content:space-between;
       gap:12px;
       padding:12px 14px;
-      border-bottom:1px solid var(--border);
+      border-bottom:1px solid rgba(255,255,255,.12);
       background: rgba(0,0,0,.22);
     }
     .modalHeader strong{
@@ -326,7 +282,7 @@
 
     .closeBtn{
       appearance:none;
-      border:1px solid var(--border);
+      border:1px solid rgba(255,255,255,.12);
       background: rgba(255,255,255,.06);
       color: var(--text);
       border-radius: 12px;
@@ -345,10 +301,10 @@
       height:100%;
       border:0;
       display:block;
-      background: #fff; /* Google Forms */
+      background: #fff;
     }
 
-    /* Hack modo oscuro (experimental) */
+    /* Hack modo oscuro */
     .modalBody.formDark{
       background: #0b0f14;
     }
@@ -377,16 +333,13 @@
           Una lista simple para avisos importantes de <strong>La Saga</strong>.
         </p>
 
-        <ul class="bullets">
-          <li>
-            <span class="check" aria-hidden="true">✓</span>
-            <span class="bulletText">Enterate primero del <strong>show que estamos planeando para comienzos del 2026</strong>.</span>
-          </li>
-          <li>
-            <span class="check" aria-hidden="true">✓</span>
-            <span class="bulletText">Dejá tu <strong>celular (opcional)</strong> para WhatsApp cuando tengamos canal oficial.</span>
-          </li>
-        </ul>
+        <p class="paraGap">
+          Enterate primero del <strong>show que estamos planeando para comienzos del 2026</strong>.
+        </p>
+
+        <p class="paraGap">
+          Dejá tu <strong>celular (opcional)</strong> para WhatsApp cuando tengamos canal oficial.
+        </p>
 
         <div class="btnRow">
           <button class="btn primary" id="openFormBtn" type="button">
