--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     .content {
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 6px;
     }
 
     .kicker {
@@ -157,7 +157,7 @@
       font-weight: 700;
       line-height: 1.1;
       color: var(--text);
-      margin: 0;
+      margin: 0 0 4px 0;
     }
 
     .intro {
@@ -183,7 +183,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 12px;
-      margin-top: 8px;
+      margin-top: 12px;
     }
 
     .btn {
